tests/e2e/keyword_not_service_argument.error
Error: syntax error in story at line 1, column 1

1|    service action from: "" not: "" # Idea is to demonstrate argument `not` is parsed successfully.
      ^^^^^^^

E0030: `service` is reserved for future use
