tests/e2e/keyword_not_service_argument.story
service action from: "" not: "" # Idea is to demonstrate argument `not` is parsed successfully.